# redis-samplecli-c

./: .gitignore  README.md  Vagrantfile
cli/: CMakeLists.txt  main.c  runme.sh
scripts/: client-test.sh  client.sh  server.sh
